fix: scrollbar was still displayed in some browsers

--- a/src/components/landing/TournamentList.module.scss
+++ b/src/components/landing/TournamentList.module.scss
@@ -16,6 +16,10 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   .cardPositionner {
     position: relative;
     min-width: 45%;  // {2}
